# SE_labv2

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: README.md  adding_agent.md  agent_interface.md  architecture.md  concepts.md  grid_map_module_today.md  manual_play_gui.md  map_rules_and_runner.md  project_plan.md  quickstart.md  registries_and_extensibility.md  trainer_listeners_reporters.md
docs/log/: 2026-03-19.md
docs/version_past/: .keep  README.md  adding_agent.md  concepts.md  manual_play_gui.md  map_rules_and_runner.md  project_plan.md  quickstart.md
experiments/: basic_grid_shortest_path_greedy.json
experiments/basic_grid_shortest_path/: config.json  notes.md
experiments/greedy/: basic_grid_10x10_random_blocks.json  basic_grid_open_5x5.json
experiments/random/: basic_grid_10x10_random_blocks.json  basic_grid_open_5x5.json
lab/: __init__.py  registry_defaults.py
lab/agents/: __init__.py  base.py  greedy_agent.py  hebbian_agent.py  random_agent.py  registry.py  template_agent.py
lab/cli/: __init__.py  run.py  run_and_plot.py  run_barebones.py  run_experiment.py  run_reporter.py  run_standard_trainer.py
lab/core/: interfaces.py  types.py
lab/envs/: __init__.py  registry.py
lab/listeners/: __init__.py  async_jsonl_listener.py  base.py  registry.py
lab/logging/: __init__.py  csv_logger.py
lab/reporters/: __init__.py  base.py  registry.py  text_summary_reporter.py
lab/scripts/: __init__.py  manual_play.py  visualize_hebbian_network.py
lab/structure/: __init__.py  basic_recorder.py  (+1 more)
maps/: level_01_trap_maze.map
(+22 files in other folders)
